# LAB-6

./: CMakeLists.txt  Main.qml  WeatherConnect.js  main.cpp
